# mate

./: Makefile.am  Makefile.in  README  TODO  config.h.in  configure  configure.in  constants.h  makedist.sh  mcc  run_benchmarks.sh  send.sh  unpack.sh
autom4te.cache/: output.1  requests  traces.0  traces.1
doc/: Makefile  VM-debugger.html  VM-instructions.html  VM-native-method-indices.html  assembly-language-file.html  class-file-format.html  grammar.y  man2pdf  mas.doxygen  mate_class_file_format  mate_class_schedule  mate_instruction_set  mc.doxygen  mvm.doxygen  specification.html  styles.css  tutorial.html
src/mas/: Makefile.am  Makefile.in  instruction_table.c  instruction_table.h  main.c  mas.1  parse.c  parse.h  parse.y  passes.c  passes.h  scan.c  scan.l  string_pool.c  string_pool.h  symbol_table.c  symbol_table.h
src/mc/: ClassTable.cc  ClassTable.h  LabelStack.cc  LabelStack.h  LocalVariableStack.cc  LocalVariableStack.h  Makefile.am  Makefile.in  MonitorStack.cc  MonitorStack.h  Node.cc  Node.h  Seq.cc  Seq.h  StringPool.cc  StringPool.h  Type.cc  Type.h  TypeModule.cc  TypeModule.h  encode.cc  globals.h  grammar.y  main.cc  mc.1  parse.cc  parse.h  parse.yy  predefined_classes.m  scan.cc  scan.ll
src/mvm/: Makefile.am  Makefile.in  barrier.c  barrier.h  breakpoint.c  breakpoint.h  class.c  class.h  class_table.c  class_table.h  disassemble.c  disassemble.h  dmp.c  dmp.h  frame.c  frame.h  garbage_collector.c  garbage_collector.h  globals.h  heap.c  heap.h  instruction_table.c  instruction_table.h  instructions.c  instructions.h  integer.c  integer.h  invoke_method.c  invoke_method.h  local_variable_array.c  local_variable_array.h  main.c  mdb.c  mdb.h  mdb_help.h  method_area.c  method_area.h  mvm.1  native_method_array.c  native_method_array.h  (+37 more)
tests/: boolean.m  cast_test3.m  circular_test.m  class_creation_test.m  equality_test.m  example.m  extends_string.m  field_assignment.m  fifth.m  first.m  for_test.m  for_test2.m  fourth.m  ge_le_ne.m  grammar.input  grammar.m  hw2-hubbe.m  if_then_test.m  in_test.m  in_test3.m  index_out_of_bounds_bug.m  inherited_test1.m  inherited_test2.m  input2  input3  instanceof_test.m  integer_negate.m  integer_tests.m  labelProblem.m  labels_oops_1.m  locals_null.m  locals_test.m  method_conflict.m  method_statement.m  misc3_test.m  misc5_test.m  misc_test.m  monitor.m  native_test.m  ne_test.m  (+39 more)
tests/dmp/: Barrier.m  BinaryInteger.m  BinaryIntegerTable.m  IntegerTable.m  MDRealTable.m  OtherTable.m  RealTable.m  Timer.m  Tuple.m  TupleTable.m  dpl.m  dpl_input  gaussian.m  gaussian_input  jacobi.m  lu.m  radix.m  test1.m  test2.m  test3.m  test4.m  test5.m  test6.m  test7.m
thesis/: Makefile  abstract.tex  appendix.tex  background.tex  conclusions.tex  implementation.tex  introduction.tex  results.tex  sources.bib  thesis.tex  unh11.sty  unhthesis.sty
thesis/figures/: depth.graffle  kendo.tiff  ownership-graph.graffle
thesis/presentation/: presentation.css  presentation.html  presentation.org
thesis/presentation/reveal.js/css/theme/: night.css
thesis/results/: Makefile  merge.sh  plot.gplot
